# simbirsoft-internship

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: csv_functions.py  database.py  loader.py  logger.py  main.py
docker/: Dockerfile  docker-compose.yml
